fixing HTML/Accessibility issues

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <p class="desc">Enter your pledge</p>
             <div class="inputs two">
               <div class="reward">
-                <img src="./images/icon-dollar.svg" alt="" srcset="">
+                <img src="./images/icon-dollar.svg" alt="">
                 <input type="number" name="reward" id="two_input" min="25" max="74" value="25">
               </div>
               <button class="pledgeBtn" onclick="backProject(2)">Continue</button>
@@ -195,7 +195,7 @@
             <p class="desc">Enter your pledge</p>
             <div class="inputs three">
               <div class="reward">
-                <img src="./images/icon-dollar.svg" alt="" srcset="">
+                <img src="./images/icon-dollar.svg" alt="">
                 <input type="number" name="reward" id="three_input" min="75" max="199" value="75" >
               </div>
               <button class="pledgeBtn" onclick="backProject(3)">Continue</button>
@@ -228,9 +228,9 @@
     <!--menu-->
     <div class="menu-overlay hidden">
       <div class="menu">
-          <a href="#about"><li>About</li></a>
-          <a href="#discover"><li>Discover</li></a>
-          <a href="#getstarted"><li>Get started</li></a>
+          <a href="#about"><span>About</span></a>
+          <a href="#discover"><span>Discover</span></a>
+          <a href="#getstarted"><span>Get started</span></a>
       </div>
     </div>
     <div class="new-overlay hidden"></div>
